cleanup: adjust analytics and README

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script defer data-domain="yc.trieve.ai" src="https://plausible.trieve.ai/js/script.js"></script>
+    <script defer data-domain="producthunt.trieve.ai" src="https://plausible.trieve.ai/js/script.js"></script>
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#5E5E5E" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,12 +12,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.trieve.ai/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.trieve.ai/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width" />
-    <title>Trieve Search | YC Company Directory</title>
+    <title>Trieve Search | ProductHunt Company Directory</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Trieve">
-    <meta property="og:site_name" content="Trieve YC Company Directory Search">
-    <meta property="og:url" content="https://yc.trieve.ai">
-    <meta property="og:description" content="Demo of Trieve's search API for the YC Company Directory. Build better, faster, and more relevant search and RAG with Trieve's Open Source API. Date recency biasing, re-ranker models, dense vector search, sub-sentence highlighting, and more all on one endpoint that you can host yourself." >
+    <meta property="og:site_name" content="Trieve ProductHunt Company Directory Search">
+    <meta property="og:url" content="https://producthunt.trieve.ai">
+    <meta property="og:description" content="Demo of Trieve's search API for ProductHunt posts. Build better, faster, and more relevant search and RAG with Trieve's Open Source API. Date recency biasing, re-ranker models, dense vector search, sub-sentence highlighting, and more all on one endpoint that you can host yourself." >
     <meta property="og:type" content="">
     <meta property="og:image" content="https://cdn.trieve.ai/trieve-og.png">
   </head>
