copy: OG tag should say source available and remove host yourself

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Trieve">
     <meta property="og:site_name" content="Trieve ProductHunt Company Directory Search">
     <meta property="og:url" content="https://producthunt.trieve.ai">
-    <meta property="og:description" content="Demo of Trieve's search API for ProductHunt posts. Build better, faster, and more relevant search and RAG with Trieve's Open Source API. Date recency biasing, re-ranker models, dense vector search, sub-sentence highlighting, and more all on one endpoint that you can host yourself." >
+    <meta property="og:description" content="Demo of Trieve's search API for ProductHunt posts. Build better, faster, and more relevant search and RAG with Trieve's Source Available Infrastructure. Date recency biasing, re-ranker models, dense vector search, sub-sentence highlighting, and more all on one endpoint." >
     <meta property="og:type" content="">
     <meta property="og:image" content="https://cdn.trieve.ai/trieve-og.png">
   </head>
